<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />

        <item
            android:id="@+id/profile"
            android:icon="@drawable/user"
            android:title="@string/profile" />

        <item
            android:id="@+id/violations"
            android:icon="@drawable/violate"
            android:title="@string/violations" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>

</menu>